--- a/ECC-prototype/FrontEndWork/search.html
+++ b/ECC-prototype/FrontEndWork/search.html
@@ -15,11 +15,11 @@
     
     <h1>Advanced Search</h1>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="search.html">Advanced Search</a>
-        <a href="collections.html">Collections</a>
-        <a href="resources.html">Resources</a>
-        <a href="ethicslinks.html">Ethics &#64; IIT</a>
+        <a class="navhover" href="index.html">Home</a>
+        <a class="navhover" href="search.html">Advanced Search</a>
+        <a class="navhover" href="collections.html">Collections</a>
+        <a class="navhover" href="resources.html">Resources</a>
+        <a class="navhover" href="ethicslinks.html">Ethics &#64; IIT</a>
     </nav>
     <p>Search has filters like subject area, organization, resource type, profession, etc.</p>
 </body>
