--- a/ECC-prototype/FrontEndWork/ethicslinks.html
+++ b/ECC-prototype/FrontEndWork/ethicslinks.html
@@ -15,11 +15,11 @@
     
     <h1>Ethics &#64; IIT</h1>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="search.html">Advanced Search</a>
-        <a href="collections.html">Collections</a>
-        <a href="resources.html">Resources</a>
-        <a href="ethicslinks.html">Ethics &#64; IIT</a>
+        <a class="navhover" href="index.html">Home</a>
+        <a class="navhover" href="search.html">Advanced Search</a>
+        <a class="navhover" href="collections.html">Collections</a>
+        <a class="navhover" href="resources.html">Resources</a>
+        <a class="navhover" href="ethicslinks.html">Ethics &#64; IIT</a>
     </nav>
     <h2>Collections Policy</h2>
         <p>Pull from existing site.</p>
