--- a/ECC-prototype/FrontEndWork/index.html
+++ b/ECC-prototype/FrontEndWork/index.html
@@ -15,11 +15,11 @@
     
     <h1>Ethics Code Collection</h1>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="search.html">Advanced Search</a>
-        <a href="collections.html">Collections</a>
-        <a href="resources.html">Resources</a>
-        <a href="ethicslinks.html">Ethics &#64; IIT</a>
+        <a class="navhover" href="index.html">Home</a>
+        <a class="navhover" href="search.html">Advanced Search</a>
+        <a class="navhover" href="collections.html">Collections</a>
+        <a class="navhover" href="resources.html">Resources</a>
+        <a class="navhover" href="ethicslinks.html">Ethics &#64; IIT</a>
     </nav>
     <p>Short blurb here about what Ethics Code Collection encompasses. How to use this tool, etc. Make sure site resembles a large search tool.</p>
     <h2>About Us</h2>
