altered CSS to match Corey

--- a/ECC-prototype/FrontEndWork/collections.html
+++ b/ECC-prototype/FrontEndWork/collections.html
@@ -7,12 +7,12 @@
     <!--Mobile specific-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
     <link rel="stylesheet" type="text/css" href="ecc.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
 </head>
 
 <body>
     <figure>
-        <img src="cseplogo.png" id="logo" alt="CSEP logo">
+        <img src="ECC-Banner.png" id="logo" alt="ECC logo">
     </figure>
     <h1>Collections</h1>
     <input type="search" id = "searchbar" placeholder="Search...">
