corrected html errors

--- a/ECC-prototype/FrontEndWork/collections.html
+++ b/ECC-prototype/FrontEndWork/collections.html
@@ -29,27 +29,27 @@
         <figure>
             <a href="stem.html"><img src="stem.png" alt="stem image"/></a>
         </figure>
-            <a href="stem.html"><button type="button" class="button">STEM</button></a>
-            <figure>
-                <img src="art-icon.png" alt="art image"/>
-            </figure>
-        <button type="button" class="button">Art/Hum.</button>
-            <figure>
-                <img src="business.png" alt="business image"/>
-            </figure>
-        <button type="button" class="button">Business</button>
-            <figure>
-                <img src="govicon.png" alt="judge image"/>
-            </figure>
-        <button type="button" class="button">Gov./Law</button>
-            <figure>
-                <img src="social.png" alt="social image"/>
-            </figure>
-        <button type="button" class="button">Social</button>
-            <figure>
-                <img src="general.png" alt="infinity image"/>
-            </figure>
-        <button type="button" class="button">General</button>
+        <a class="button" href="stem.html">STEM</a>
+        <figure>
+            <img src="art-icon.png" alt="art image"/>
+        </figure>
+        <a class="button" href="art.html">Art/Hum.</a>
+        <figure>
+            <img src="business.png" alt="business image"/>
+        </figure>
+       <a class="button" href="business.html">Business</a>
+        <figure>
+            <img src="govicon.png" alt="judge image"/>
+        </figure>
+        <a class="button" href="govlaw.html">Gov/Law</a>
+        <figure>
+            <img src="social.png" alt="social image"/>
+        </figure>
+        <a class="button" href="social.html">Social</a>
+        <figure>
+            <img src="general.png" alt="infinity image"/>
+        </figure>
+        <a class="button" href="general.html">General</a>
     </div>
 </body>
 </html>
