--- a/ECC-prototype/FrontEndWork/collections.html
+++ b/ECC-prototype/FrontEndWork/collections.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <a href="index.html"><img src="ECC-Banner.png" id="logo" alt="ECC logo"></a>
+    <a class="logo" href="index.html"><img src="ECC-Banner.png" class="logo" alt="ECC logo"/></a>
     <h1>Collections</h1>
     <form><input type="search" value= "" id="searchbar" placeholder="Explore Our Digital Collection">
         <button type="button" id="search">Search</button></form> 
