--- a/ECC-prototype/FrontEndWork/search.html
+++ b/ECC-prototype/FrontEndWork/search.html
@@ -6,79 +6,69 @@
     <meta charset="utf-8">
     <!--Mobile specific-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
-	<link rel="stylesheet" type="text/css" href="search.css">
-
+    <link rel="stylesheet" type="text/css" href="ecc.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
 </head>
 
-<body>
-
-<figure class="header">
-  <img src="cseplogo.png" alt="CSEP logo" />
-<center> <h1 style="color:red;">ETHICS CODE COLLECTION</h1> </center>
-  </figure>
-<br><br><br><br><br><br><br><br>
-
-	
-	<hr>
-	  <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="search.html">Advanced Search</a></li>
-        <li><a href="collections.html">Collections</a></li>
-        <li><a href="resources.html">Resources</a></li>
-        <li><a href="ethicslinks.html">Ethics &#64; IIT</a></li>
-    </ul> <br>
-    
+<body>	
+    <a class="logo" href="index.html"><img src="ECC-Banner.png" class="logo" alt="ECC logo"/></a>
     <h1>Advanced Search</h1>
-	<div id = "box1">
-    <input type="text" name="search" placeholder= "Search">
-    <form action="demo_form.asp"><br>
+    <form><input type="search" value= "" id="searchbar" placeholder="Explore Our Digital Collection">
+        <button type="button" id="search">Search</button></form> 
+    <nav>
+        <a class="navhover" href="index.html">Home</a>
+        <a class="navhover" href="search.html">Advanced Search</a>
+        <a class="navhover" href="collections.html">Collections</a>
+        <a class="navhover" href="resources.html">Resources</a>
+        <a class="navhover" href="ethicslinks.html">Ethics &#64; IIT</a>
+    </nav>
 
 <select name="All Fields">
 <option value="Field1">Field1</option>
 <option value="Field2">Field2</option>
 <option value="Field3">Field3</option>
-</select><br>
-<textarea name="text" rows="3" cols="30">Text Area</textarea></br>
+</select>
+<textarea name="text" rows="3" cols="30">Text Area</textarea>
 
 <select name="All Fields">
 <option value="Field1">Field1</option>
 <option value="Field2">Field2</option>
 <option value="Field3">Field3</option>
-</select><br>
-<textarea name="text" rows="3" cols="30">Text Area</textarea><br><br
+</select>
+<textarea name="text" rows="3" cols="30">Text Area</textarea>
 
-<input type="button"    value=" Add Fields">
-<input type="button"    value=" Search"></br></br>
+<input type="button" value=" Add Fields">
+<input type="button" value=" Search">
 
-<p1><b> Additionl Search Criteria </b><p1><br><br>
-<p2> Article Option: </p2> 
-<select id="Article Option" name="Article Option">
-  <option  disabled selected</option>
+<p><b> Additional Search Criteria </b><p><br><br>
+<p> Article Option: </p> 
+<select name="Article Option">
+  <option disabled>""</option>
   <option>None</option>
   <option>Option-1</option>
   <option>Option-2</option>
   <option>Option-3</option>
 </select><br>
 
-<p3> Years: </p3> 
-<select id="Years" name="years">
-  <option  disabled selected</option>
+<p> Years: </p> 
+<select name="years">
+  <option disabled>""</option>
   <option>None</option>
   <option>Option-1</option>
   <option>Option-2</option>
   <option>Option-3</option>
 </select><br>
 
-<p4> Search by language: </p4> 
-<select id="Search by language" name="Search by language">
-  <option  disabled selected</option>
+<p> Search by language: </p> 
+<select name="Search by language">
+  <option disabled>""</option>
   <option>None</option>
   <option>Option-1</option>
   <option>Option-2</option>
   <option>Option-3</option>
 </select><br><br>
 
-<p5><b>Categories</b></p5><br>
+<p><b>Categories</b></p><br>
   <input type="checkbox" name="Agriculture" value="Agriculture"> Agriculture<br>
   <input type="checkbox" name="Animal Breeding and Care" value="Animal Breeding and Care"> Animal Breeding and Care<br>
   <input type="checkbox" name="Architecture" value="Architecture"> Architecture<br>
@@ -104,14 +94,10 @@
   <input type="checkbox" name="Wildlife and Enviornmental Stewardship" value="Wildlife and Enviornmental Stewardship"> Wildlife and Enviornmental Stewardship<br>
   <input type="checkbox" name="All" value="All"> All<br><br>
 
-  <p6><b>Format</b></p6><br>
+  <p><b>Format</b></p><br>
   <input type="checkbox" name="Print Guide" value="Print Guide"> Print Guide<br>
   <input type="checkbox" name="Full Text" value="Full Text"> Full Text<br>
   <input type="checkbox" name="All" value="All"> All<br><br>
   <input type="submit" value="Submit">
- </div>
-
-  
-
 </body>
 </html>
