corrected stem and science page design uniformity

--- a/ECC-prototype/FrontEndWork/stem.html
+++ b/ECC-prototype/FrontEndWork/stem.html
@@ -11,12 +11,10 @@
 </head>
 
 <body>
-    <figure>
-        <img src="ECC-Banner.png" id="logo" alt="ECC logo">
-    </figure>
+    <a class="logo" href="index.html"><img src="ECC-Banner.png" class="logo" alt="ECC logo"/></a>
     <h1>STEM</h1>
-        <input type="search" id = "searchbar" placeholder="Search...">
-        <button type="button" id="search">Search</button> 
+    <form><input type="search" value= "" id="searchbar" placeholder="Explore Our Digital Collection">
+        <button type="button" id="search">Search</button></form> 
     <nav>
         <a class="navhover" href="index.html">Home</a>
         <a class="navhover" href="search.html">Advanced Search</a>
