--- a/ECC-prototype/FrontEndWork/stem.html
+++ b/ECC-prototype/FrontEndWork/stem.html
@@ -27,5 +27,51 @@
     <a href="technology.html"><div class="stemcat">&raquo; Technology</div></a>
     <a href="engineering.html"><div class="stemcat">&raquo;  Engineering</div></a>
     <a href="math.html"><div class="stemcat">&raquo; Mathematics</div></a>
+
+<!-- Footer -->
+<footer class="column">
+        <h5>RESOURCES</h5>
+            <ul>
+                <li><a class="flinks" href="http://ethics.iit.edu/ecodes/node/5621">Print Guide</a></li>
+                <li><a class="flinks" href="http://ethics.iit.edu/ecodes/node/5421">Collection Policy</a></li>
+                <li><a class="flinks" href="http://ethics.iit.edu/ecodes/bibliography">Bibliography</a></li>
+                <li><a class="flinks" href="http://ethics.iit.edu/ecodes/introduction">Why Codes?</a></li>
+            </ul>
+      
+        <h5>ETHICS @ IIT</h5>
+            <ul>
+                <li><a class="flinks" href="http://ethics.iit.edu/ecodes/about">About</a></li>
+                <li><a class="flinks" href="http://ethics.iit.edu/ecodes/authoring-code">Authoring a Code</a></li>
+                <li><a class="flinks" href="http://ethics.iit.edu/">CSEP</a></li>
+                <li><a class="flinks" href="http://ethicscodescollection.blogspot.com/">News and Updates</a></li>
+            </ul>
+    <div>
+        <h5>SUBSCRIBE TO THE CSEP</h5>  
+            <form>
+                <input type="text" id="emailbar" value="" placeholder="Email Address">
+                <button type="submit" id="emailbutton">SUBSCRIBE</button>
+            </form>
+    </div>
+            <ul>
+                <li><a class="flinks" href="https://www.facebook.com/CSEPIllinoisTech/"><i class="icon-facebook"></i></a></li>
+                <li><a class="flinks" href="https://twitter.com/csep1"><i class="icon-twitter"></i></a></li>
+                <li><a class="flinks" href="http://cseplibrary.blogspot.com/"><i class="icon-blogpost"></i></a></li>
+                <li><a class="flinks" href="http://feeds2.feedburner.com/CsepLibrary"><i class="icon-feedburner"></i></a></li>
+            </ul>
+    
+    <!--<div id="footer-wrapper">
+            <h5>Center for the Study of Ethics in the Professions</h5>
+                <p>
+                Hermann Hall
+                <br> 
+                3241 S Federal Street, Room 204 
+                <br> 
+                Chicago, IL 60616
+                </p>
+                <p>
+                Tel 312.567.3017 | <a href="mailto:csep@iit.edu"> csep@iit.edu</a>
+                </p>
+    </div>  -->
+</footer>
 </body>
 </html>
