changed page titles and added ethics code example

--- a/ECC-prototype/FrontEndWork/science.html
+++ b/ECC-prototype/FrontEndWork/science.html
@@ -25,6 +25,7 @@
     <ul>
         <li>Barcelona Biomedical Research
             <button type="button" class="plus">&#43;</button></li>
+            <a href="ethicscode.html">2007</a>
         <li>Biomedical Engineering Society
             <button type="button" class="plus">&#43;</button></li>
         <li>Boston Global Forum
