--- a/ECC-prototype/FrontEndWork/collections.html
+++ b/ECC-prototype/FrontEndWork/collections.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Ethics Code Collection</title>
+    <title>Ethics Code Collection - Collections</title>
     <link rel="shortcut icon" href="iiticon.png"/>
     <meta charset="utf-8">
     <!--Mobile specific-->
