added search exmaples to home page

--- a/ECC-prototype/FrontEndWork/index.html
+++ b/ECC-prototype/FrontEndWork/index.html
@@ -36,12 +36,15 @@
 <!--- Content -->
 <div>
     <ul>
-        <li>Search by keyword in the search box up top</li>
-        <li>Perform an<a href="search.html">Advanced Search</a>by subject, term, organization, or year</li>
-        <li>Browse the collection by professional category in<a href="collections.html">Collections</a></li>            
+        <li>&rarr; Search by keyword in the search box up top</li>
+        <img src="keywordex.png" class="logo" alt="keyword search sample picture">
+        <li>&rarr; Perform an<a href="search.html">Advanced Search</a>by subject, term, organization, or year</li>
+        <img src="advsearchex.png" class="logo" alt="advanced search sample picture">
+        <li>&rarr; Browse the collection by professional category in<a href="collections.html">Collections</a></li>
+        <img src="collsearchex.png" class="logo" alt="collections search sample picture">
     </ul>
     
-    <p>Thanks to our sponsor the<a href="https://www.macfound.org/" class="plinks"> John D. and Catherine T. MacArthur Foundation</a>, and the many individuals who have contributed to this resource.</p>
+    <p class="banner">Thanks to our sponsor the<a href="https://www.macfound.org/" class="plinks"> John D. and Catherine T. MacArthur Foundation</a>, and the many individuals who have contributed to this resource.</p>
             
 </div>
 
