fixed outlying image issue

--- a/ECC-prototype/FrontEndWork/index.html
+++ b/ECC-prototype/FrontEndWork/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
     </head>
     <body>
-        <a class="logo" href="index.html"><img src="ECC-Banner.png" class="logo" alt="ECC logo"/></a>
+        <img src="ECC-Banner.png" class="logo" alt="ECC logo"/>
     <nav>
         <a class="navhover" href="index.html">Home</a>
         <a class="navhover" href="search.html">Advanced Search</a>
