fixed search layout

--- a/ECC-prototype/FrontEndWork/search.html
+++ b/ECC-prototype/FrontEndWork/search.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>	
-    <a class="logo" href="index.html"><img src="ECC-Banner.png" class="logo" alt="ECC logo"/></a>
+    <img src="ECC-Banner.png" class="logo" alt="ECC logo"/>
     <nav>
         <a class="navhover" href="index.html">Home</a>
         <a class="navhover" href="search.html">Advanced Search</a>
@@ -19,11 +19,11 @@
         <a class="navhover" href="resources.html">Resources</a>
         <a class="navhover" href="ethicslinks.html">Ethics &#64; IIT</a>
     </nav>
-    <h1>Advanced Search</h1>
     <div>
         <input type="search" value= "" id="searchbar" placeholder="Explore Our Digital Collection">
-        <button type="button" id="search">Search</button>
+        <button type="button" id="search">SEARCH</button>
     </div> 
+    <h1>Advanced Search</h1>
     <div class="textfields">
         <select class="select">
             <option value="All">All</option>
