fixed collections layout

--- a/ECC-prototype/FrontEndWork/collections.html
+++ b/ECC-prototype/FrontEndWork/collections.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <a class="logo" href="index.html"><img src="ECC-Banner.png" class="logo" alt="ECC logo"/></a>
+    <img src="ECC-Banner.png" class="logo" alt="ECC logo"/>
     <nav>
         <a class="navhover" href="index.html">Home</a>
         <a class="navhover" href="search.html">Advanced Search</a>
@@ -20,34 +20,32 @@
         <a class="navhover" href="ethicslinks.html">Ethics &#64; IIT</a>
     </nav>
     <h1>Collections</h1>
-    <form><input type="search" value= "" id="searchbar" placeholder="Explore Our Digital Collection">
-        <button type="button" id="search">Search</button></form> 
     
     <div class="column">
         <figure>
-            <a href="stem.html"><img src="stem.png" alt="stem image"/></a>
+            <img src="stem.png" alt="stem image"/>
         </figure>
-        <a class="button" href="stem.html">STEM</a>
+        <a class="button" href="stem.html">&rArr; STEM</a>
         <figure>
             <img src="art-icon.png" alt="art image"/>
         </figure>
-        <a class="button" href="art.html">Art/Hum.</a>
+        <a class="button" href="art.html">&rArr; Art/Hum.</a>
         <figure>
             <img src="business.png" alt="business image"/>
         </figure>
-       <a class="button" href="business.html">Business</a>
+       <a class="button" href="business.html">&rArr; Business</a>
         <figure>
             <img src="govicon.png" alt="judge image"/>
         </figure>
-        <a class="button" href="govlaw.html">Gov/Law</a>
+        <a class="button" href="govlaw.html">&rArr; Gov/Law</a>
         <figure>
             <img src="social.png" alt="social image"/>
         </figure>
-        <a class="button" href="social.html">Social</a>
+        <a class="button" href="social.html">&rArr; Social</a>
         <figure>
             <img src="general.png" alt="infinity image"/>
         </figure>
-        <a class="button" href="general.html">General</a>
+        <a class="button" href="general.html">&rArr; General</a>
     </div>
     
 <!-- Footer -->
