fixed stem layout

--- a/ECC-prototype/FrontEndWork/stem.html
+++ b/ECC-prototype/FrontEndWork/stem.html
@@ -11,10 +11,8 @@
 </head>
 
 <body>
-    <a class="logo" href="index.html"><img src="ECC-Banner.png" class="logo" alt="ECC logo"/></a>
+    <img src="ECC-Banner.png" class="logo" alt="ECC logo"/>
     <h1>STEM</h1>
-    <form><input type="search" value= "" id="searchbar" placeholder="Explore Our Digital Collection">
-        <button type="button" id="search">Search</button></form> 
     <nav>
         <a class="navhover" href="index.html">Home</a>
         <a class="navhover" href="search.html">Advanced Search</a>
@@ -23,10 +21,10 @@
         <a class="navhover" href="ethicslinks.html">Ethics &#64; IIT</a>
     </nav>
     
-    <a href="science.html"><div class="stemcat">&raquo; Science</div></a>
-    <a href="technology.html"><div class="stemcat">&raquo; Technology</div></a>
-    <a href="engineering.html"><div class="stemcat">&raquo;  Engineering</div></a>
-    <a href="math.html"><div class="stemcat">&raquo; Mathematics</div></a>
+    <a href="science.html"><div class="stemcat">&rArr; Science</div></a>
+    <a href="technology.html"><div class="stemcat">&rArr; Technology</div></a>
+    <a href="engineering.html"><div class="stemcat">&rArr; Engineering</div></a>
+    <a href="math.html"><div class="stemcat">&rArr; Mathematics</div></a>
 
 <!-- Footer -->
 <footer class="column">
