fixed science layout

--- a/ECC-prototype/FrontEndWork/science.html
+++ b/ECC-prototype/FrontEndWork/science.html
@@ -11,10 +11,9 @@
 </head>
 
 <body>
-    <a class="logo" href="index.html"><img src="ECC-Banner.png" class="logo" alt="ECC logo"/></a>
+    <img src="ECC-Banner.png" class="logo" alt="ECC logo"/>
     <h1>Science</h1>
-    <form><input type="search" value= "" id="searchbar" placeholder="Explore Our Digital Collection">
-        <button type="button" id="search">Search</button></form> 
+  
     <nav>
         <a class="navhover" href="index.html">Home</a>
         <a class="navhover" href="search.html">Advanced Search</a>
@@ -41,6 +40,9 @@
         <li>Coastal and Estuarine
             <button type="button" class="plus">&#43;</button></li>
     </ul>
+    
+    <form><input type="search" value= "" id="searchbar" placeholder="Explore Our Digital Collection">
+    <button type="button" id="search">Search</button></form> 
     
 <!-- Footer -->
 <footer class="column">
