added more content to ethicscode

--- a/ECC-prototype/FrontEndWork/ethicscode.html
+++ b/ECC-prototype/FrontEndWork/ethicscode.html
@@ -43,6 +43,12 @@
             <li><a href="">8. Main legal requirements affecting scientific activities</a></li>
             <li><a href="">9. The Committee for Research Integrity</a></li>
         </ol>
+            <p>1. Supervision of researchers in training</p>
+            <p>1.1 Assignment of a mentor: All individuals linked to a PRBB centre either through a contract or grant in order to receive some form of training [1] will be assigned a mentor.[2] [1] Training as a scientist or research technician; this includes undergraduate students, postgraduates, individuals with diploma-level education, and others. [2] The term mentor will also be used to refer to a tutor or thesis/project supervisor.</p>
+            <p>1.2. Responsibilities of mentors: The mentor defines the objectives and takes responsibility for the education of the individual in training, and should advise and guide the individual in order that the expectations of the initially proposed training may be fulfilled within the time allotted. Furthermore, the mentor must provide the individual with the best possible conditions for the development of his or her future scientific career.</p>
+            <p>1.3. Limits to the number of individuals assigned to a single mentor: The total number of trainees for whom a single mentor is responsible should be appropriate and compatible with the extent of the mentor's obligations and commitments.</p>
+            <p>1.4. Rights and obligations of individuals in training: Trainees have rights and obligations that differ from those of contracted individuals in the centre. The mentor should be especially diligent in ensuring that trainee scientists are not involved in performing tasks outside those prescribed by their training. Trainees should not participate in projects with commercial restrictions on the publication of results or that involve delays beyond those associated with procedures necessary for the commercial protection of the results obtained.</p>
+
         <div class="reference">
             <h2>REFERENCE</h2>
             <h5>Organization</h5>
