fixed footer layout on all pages

--- a/ECC-prototype/FrontEndWork/science.html
+++ b/ECC-prototype/FrontEndWork/science.html
@@ -59,35 +59,17 @@
                 <li><a class="flinks" href="http://ethics.iit.edu/ecodes/about">About</a></li>
                 <li><a class="flinks" href="http://ethics.iit.edu/ecodes/authoring-code">Authoring a Code</a></li>
                 <li><a class="flinks" href="http://ethics.iit.edu/">CSEP</a></li>
-                <li><a class="flinks" href="http://ethicscodescollection.blogspot.com/">News and Updates</a></li>
+                <li><a class="flinks" href="http://ethicscodescollection.blogspot.com/">News/Updates</a></li>
             </ul>
-    <div>
+    
         <h5>SUBSCRIBE TO THE CSEP</h5>  
             <form>
                 <input type="text" id="emailbar" value="" placeholder="Email Address">
                 <button type="submit" id="emailbutton">SUBSCRIBE</button>
             </form>
-    </div>
-            <ul>
-                <li><a class="flinks" href="https://www.facebook.com/CSEPIllinoisTech/"><i class="icon-facebook"></i></a></li>
-                <li><a class="flinks" href="https://twitter.com/csep1"><i class="icon-twitter"></i></a></li>
-                <li><a class="flinks" href="http://cseplibrary.blogspot.com/"><i class="icon-blogpost"></i></a></li>
-                <li><a class="flinks" href="http://feeds2.feedburner.com/CsepLibrary"><i class="icon-feedburner"></i></a></li>
-            </ul>
-    
-    <!--<div id="footer-wrapper">
-            <h5>Center for the Study of Ethics in the Professions</h5>
-                <p>
-                Hermann Hall
-                <br> 
-                3241 S Federal Street, Room 204 
-                <br> 
-                Chicago, IL 60616
+            <p>3241 S Federal Street, Room 204 | Chicago, IL 60616</p> <p>Tel 312.567.3017 |<a href="mailto:csep@iit.edu"> csep@iit.edu</a>
                 </p>
-                <p>
-                Tel 312.567.3017 | <a href="mailto:csep@iit.edu"> csep@iit.edu</a>
-                </p>
-    </div>  -->
+
 </footer>
 </body>
 </html>
