--- a/ECC-prototype/FrontEndWork/resources.html
+++ b/ECC-prototype/FrontEndWork/resources.html
@@ -60,8 +60,9 @@
                 <input type="text" id="emailbar" value="" placeholder="Email Address">
                 <button type="submit" id="emailbutton">SUBSCRIBE</button>
             </form>
-            <p>3241 S Federal Street, Room 204 | Chicago, IL 60616</p> <p>Tel 312.567.3017 |<a href="mailto:csep@iit.edu"> csep@iit.edu</a>
-                </p>
+            <p>3241 S Federal Street, Room 204 | Chicago, IL 60616</p> 
+            <p>Tel 312.567.3017 |<a href="mailto:csep@iit.edu"> csep@iit.edu</a>
+            </p>
 
 </footer>
 </body>
