edited nav layout on all pages

--- a/ECC-prototype/FrontEndWork/ethicslinks.html
+++ b/ECC-prototype/FrontEndWork/ethicslinks.html
@@ -10,7 +10,8 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
     </head>
     <body>
-        <nav>
+        <nav class="nav">
+        
             <a class="navhover" href="index.html">Home</a>
             <a class="navhover" href="search.html">Advanced Search</a>
             <a class="navhover" href="collections.html">Collections</a>
