--- a/ECC-prototype/FrontEndWork/collections.html
+++ b/ECC-prototype/FrontEndWork/collections.html
@@ -11,12 +11,13 @@
 </head>
 
 <body>
-    <nav>
-        <a class="navhover" href="index.html">Home</a>
-        <a class="navhover" href="search.html">Advanced Search</a>
-        <a class="navhover" href="collections.html">Collections</a>
-        <a class="navhover" href="resources.html">Resources</a>
-        <a class="navhover" href="ethicslinks.html">Ethics &#64; IIT</a>
+    <nav class="nav">
+        
+            <a class="navhover" href="index.html">Home</a>
+            <a class="navhover" href="search.html">Advanced Search</a>
+            <a class="navhover" href="collections.html">Collections</a>
+            <a class="navhover" href="resources.html">Resources</a>
+            <a class="navhover" href="ethicslinks.html">Ethics &#64; IIT</a>
     </nav>
     <img src="ECC-Banner.png" class="logo" alt="ECC logo"/>
     <h1>Collections</h1>
