--- a/ECC-prototype/FrontEndWork/ethicscode.html
+++ b/ECC-prototype/FrontEndWork/ethicscode.html
@@ -11,13 +11,14 @@
     </head>
 
     <body>
-        <nav>
+        <nav class="nav">
+        
             <a class="navhover" href="index.html">Home</a>
             <a class="navhover" href="search.html">Advanced Search</a>
             <a class="navhover" href="collections.html">Collections</a>
             <a class="navhover" href="resources.html">Resources</a>
             <a class="navhover" href="ethicslinks.html">Ethics &#64; IIT</a>
-        </nav>
+    </nav>
         <img src="ECC-Banner.png" class="logo" alt="ECC logo"/>
         
         <h1>2007 Code of Good Scientific Practice</h1>
