--- a/ECC-prototype/FrontEndWork/resources.html
+++ b/ECC-prototype/FrontEndWork/resources.html
@@ -10,13 +10,14 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
     </head>
     <body>
-        <nav>
+        <nav class="nav">
+        
             <a class="navhover" href="index.html">Home</a>
             <a class="navhover" href="search.html">Advanced Search</a>
             <a class="navhover" href="collections.html">Collections</a>
             <a class="navhover" href="resources.html">Resources</a>
             <a class="navhover" href="ethicslinks.html">Ethics &#64; IIT</a>
-        </nav>
+    </nav>
         <img src="ECC-Banner.png" class="logo" alt="ECC logo"/>
 <!-- Main Banner -->
 <div class="banner">
