--- a/ECC-prototype/FrontEndWork/authoringcode.html
+++ b/ECC-prototype/FrontEndWork/authoringcode.html
@@ -6,19 +6,22 @@
         <meta charset="utf-8">
         <!--Mobile specific-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
+        <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="ecc.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
     </head>
     <body>
+              <img src="ECC-Banner.png" class="logo" alt="ECC logo"/>
+
         <nav class="nav">
-        
+
             <a class="navhover" href="index.html">Home</a>
             <a class="navhover" href="search.html">Advanced Search</a>
             <a class="navhover" href="collections.html">Collections</a>
             <a class="navhover" href="resources.html">Resources</a>
             <a class="navhover" href="ethicslinks.html">Ethics &#64; IIT</a>
     </nav>
-        <img src="ECC-Banner.png" class="logo" alt="ECC logo"/>
+      
 <!-- Main Banner -->
 <div class="banner">
     <h1>THE ECC</h1>
