--- a/ECC-prototype/FrontEndWork/search.html
+++ b/ECC-prototype/FrontEndWork/search.html
@@ -6,11 +6,13 @@
     <meta charset="utf-8">
     <!--Mobile specific-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="ecc.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
 </head>
 
 <body>	
+ <img src="ECC-Banner.png" class="logo" alt="ECC logo"/>
     <nav class="nav">
         
             <a class="navhover" href="index.html">Home</a>
@@ -19,7 +21,7 @@
             <a class="navhover" href="resources.html">Resources</a>
             <a class="navhover" href="ethicslinks.html">Ethics &#64; IIT</a>
     </nav>
-    <img src="ECC-Banner.png" class="logo" alt="ECC logo"/>
+   
     <div>
         <input type="search" value= "" id="searchbar" placeholder="Explore Our Digital Collection">
         <button type="button" id="search">SEARCH</button>
