--- a/ECC-prototype/FrontEndWork/stem.html
+++ b/ECC-prototype/FrontEndWork/stem.html
@@ -6,11 +6,14 @@
     <meta charset="utf-8">
     <!--Mobile specific-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="ecc.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
 </head>
 
 <body>
+    <img src="ECC-Banner.png" class="logo" alt="ECC logo"/>
+
     <nav class="nav">
         
             <a class="navhover" href="index.html">Home</a>
@@ -19,7 +22,6 @@
             <a class="navhover" href="resources.html">Resources</a>
             <a class="navhover" href="ethicslinks.html">Ethics &#64; IIT</a>
     </nav>
-    <img src="ECC-Banner.png" class="logo" alt="ECC logo"/>
     <h1>STEM</h1>
     
     <a href="science.html"><div class="stemcat">&rArr; Science</div></a>
