Fixing Styling Errors
Fixed too large font size, and made the footer responsive to screen
sizes properly

--- a/ECC-prototype/FrontEndWork/index.html
+++ b/ECC-prototype/FrontEndWork/index.html
@@ -41,15 +41,15 @@
 <!--- Content -->
 <div class="searchex">
         <p>&rarr; Search by keyword in the search box up top</p>
-        <img src="keywordex.png" class="logo" alt="keyword search sample picture">
+        <img src="keywordex.png" class="category_image" alt="keyword search sample picture">
 </div>
 <div class="searchex">
         <p>&rarr; Perform an<a href="search.html">Advanced Search</a>by subject, term, organization, or year</p>
-        <img src="advsearchex.png" class="logo" alt="advanced search sample picture">
+        <img src="advsearchex.png" class="category_image" alt="advanced search sample picture">
 </div>
 <div class="searchex">
         <p>&rarr; Browse the collection by professional category in<a href="collections.html">Collections</a></p>
-        <img src="collsearchex.png" class="logo" alt="collections search sample picture">
+        <img src="collsearchex.png" class="category_image" alt="collections search sample picture">
 </div>
 <div>
     
